# irc-bridge

./: .gitignore  Cargo.toml  flake.nix  irc-bridge.nix
migrations/: 20230830144803_users.down.sql  20230830144803_users.up.sql
src/: discord.rs  irc_side.rs  main.rs
