[package]
name = "irc-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive", "env"] }
irc = { version = "0.15.0", default-features = false, features = ["ctcp", "serde", "serde_derive", "tls-rust", "tokio-rustls", "toml", "toml_config"] }
serenity = { version = "0.11.5", features = ["model"] }
tokio = { version = "1", features = ["full"] }
